<resources>
    <string name="app_name">AdvocatesAndNotariesRFpro</string>
    <string name="action_settings">Settings</string>
    <string name="project_ago">назад</string>
    <string name="project_close_dialog">закрыть</string>
    <string name="version">0.321.3.14B</string>
    <string name="title_activity_log_in">LogIN</string>
    <string name="log_in_header">Войдите или зарегистрируйтесь</string>
    <string name="log_in_mail">E-mail</string>
    <string name="log_in_pass">Пароль</string>
    <string name="log_in_save">сохранить пароль?</string>
    <string name="log_in_input">вход</string>
    <string name="log_in_reg">Регистрация</string>
    <string name="log_in_forget">Напомнить пароль</string>
    <string name="title_activity_sign_up">SignUP</string>
    <string name="surname_sign">Фамилия*</string>
    <string name="patronymic_sign">Отчество*</string>
    <string name="name_sign">Имя*</string>
    <string name="region_sign">Регион</string>
    <string name="city_sign">Город</string>
    <string name="reg_num_sign">Номер в реестре АП/рег.номер* </string>
    <string name="stag_sign">Стаж (с  какого года)*</string>
    <string name="qualification_sign">Специализация</string>
    <string name="fsar_sign">Членство в ФСАР</string>
    <string name="work_weekqnds_sign">Работа в выходные</string>
    <string name="time_out_sign">Возможность срочного выезда</string>
    <string name="site_sign">Сайт</string>
    <string name="name_firm_sign">Фирма, компания, организация</string>
    <string name="adres_sign">Ваш адрес</string>
    <string name="phone_sign">Телефон*</string>
    <string name="email_sign">E-mail*</string>
    <string name="password_sign">Пароль*</string>
    <string name="password_two_sign">Повторите пароль*</string>
    <string name="but_registr">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="title_activity_del">del</string>
    <string name="title_activity_login_add">LoginAdd</string>
    <string name="error_sign_one">Поле " </string>
    <string name="error_sign_two">не заполнено!" </string>
    <string name="error_sign_phone_one">Номер телефона должен состоять из 11 цифр (+7 9** *** **-**)!" </string>
    <string name="error_sign_phone_two">Номер телефона должен начинаться с цифры!" </string>
    <string name="error_password_lengh">Пароль долджен состоят минимум из 6 символов!" </string>
    <string name="error_password_no_two">Пароли не совпадают!" </string>
    <string name="qualific_1">" Арбитраж и защита бизнеса</string>
    <string name="qualific_2">" Административное и трудовое право</string>
    <string name="qualific_3">" Гражданское и наследственное право</string>
    <string name="qualific_4">" Страховые споры и ГИБДД</string>
    <string name="qualific_5">" Уголовное право</string>
    <string name="qualific_6">" Обращения в органы власти РФ</string>
    <string name="qualific_7">" Авторское право</string>
    <string name="qualific_8">" Жилищное и семейное право</string>
    <string name="qualific_9">" Исполнительное производство (долги)</string>
    <string name="qualific_10">" Кадастровые и земельные споры</string>
    <string name="qualific_11">" Конституционное право</string>
    <string name="qualific_12">" Медиация</string>
    <string name="qualific_13">" Медицинское право</string>
    <string name="qualific_14">" Миграционное право</string>
    <string name="qualific_15">" Налоговые споры (бухгалтерия)</string>
    <string name="qualific_16">" Обращения в ЕСПЧ (ООН)</string>
    <string name="qualific_17">" Права потребителей</string>
    <string name="qualific_18">" Регистрация фирм</string>
    <string name="qualific_19">" Сделки и споры с недвижимостью</string>
    <string name="qualific_20">" Таможенное право</string>
    <string name="title_activity_asked_user">Asked_user</string>
    <string name="title_activity_asked_forum">Asked_forum</string>
    <string-array name="ArrayTipQuest">
        <item>Гражданское и наследственное право</item>
        <item>Административное и трудовое право</item>
        <item>Арбитражное и налоговое право</item>
        <item>Уголовное право</item>
        <item>Права потребителей</item>
        <item>Международное право (ЕСПЧ)</item>
        <item>Регистрация и реорганизация фирм</item>
        <item>Сделки с недвижимостью</item>
        <item>Без темы </item>
    </string-array>
    <string name="title_activity_sidebar">Sidebar</string>
    <string name="sidebar_s1">Мой профиль</string>
    <string name="sidebar_s2">Мои ответы</string>
    <string name="sidebar_s3">Онлайн консультация</string>
    <string name="sidebar_s4">Чат</string>
    <string name="sidebar_s5">Оплата услуг</string>
    <string name="sidebar_s6">Акции</string>
    <string name="sidebar_s7">Настройка</string>
    <string name="sidebar_s8">Помощь</string>
    <string name="sidebar_s9">О нас</string>
    <string name="title_activity_my_profile">My_profile</string>
    <string name="my_profile_header">мой профиль</string>
    <string name="my_profile_m1">Рейтинг\</string>
    <string name="my_profile_m2">Телефон:</string>
    <string name="my_profile_m3">E-mail:</string>
    <string name="my_profile_m4">Количество ответов:</string>
    <string name="my_profile_m5">Количество благодарностей:</string>
    <string name="my_profile_info">информация</string>
    <string name="my_profile_m6">Адрес:</string>
    <string name="my_profile_m7">Стаж работы</string>
    <string name="my_profile_m8">Компания, организация:</string>
    <string name="my_profile_m9">Сайт:</string>
    <string name="my_profile_m10">Специализация:</string>
    <string name="my_profile_m11">Срочный выезд:</string>
    <string name="my_profile_m12">Членство в ФСАР:</string>
    <string name="my_profile_m13">График работы:</string>
    <string name="my_profile_m14">Выйти из аккаунта</string>
    <string name="my_profile_m15">Судебная территория:</string>
    <string name="my_profile_m16">Рег. номер:</string>
    <string-array name="array_profile_jur">
        <item>Рег. номер   </item>
        <item>Стаж         </item>
        <item>Срочный выезд</item>
        <item>Членство во ФСАР </item>
        <item>Работа в выходные</item>
    </string-array>
    <string-array name="array_prof_spec">
        <item>уголовные дела</item>
        <item>арбитражные дела</item>
        <item>семейное право</item>
        <item>ценные бумаги</item>
        <item>исполнительное производство</item>
        <item>права потребителей</item>
    </string-array>
    <string name="title_activity_my_theme">My_theme</string>
    <string name="my_quest_header">мои ответы</string>
    <string name="my_quest_header_list_1">Персональное обращение</string>
    <string name="my_quest_header_list_2">Общие вопросы</string>
    <string-array name="my_quest_array_sorting">
        <item>по статусу</item>
        <item>по дате</item>
        <item>по теме</item>
    </string-array>
    <string-array name="ArraySpecialization">
        <item>Гражданское и наследственное право</item>
        <item>Административное и трудовое право</item>
        <item>Арбитражное и налоговое право</item>
        <item>Уголовное право</item>
        <item>Права потребителей</item>
        <item>Международное право (ЕСПЧ)</item>
        <item>Регистрация и реорганизация фирм</item>
        <item>Сделки с недвижимостью</item>
        <item>Без темы </item>
    </string-array>
    <string-array name="arraySpecializationNew">
        <item>Арбитраж и защита бизнеса</item>
        <item>Административное и трудовое право</item>
        <item>Гражданское и наследственное право</item>
        <item>Страховые споры и ГИБДД</item>
        <item>Уголовное право</item>
        <item>Обращения в органы власти РФ</item>
        <item>Авторское право</item>
        <item>Жилищное и семейное право</item>
        <item>Исполнительное производство (долги)</item>
        <item>Кадастровые и земельные споры</item>
        <item>Конституционное право</item>
        <item>Медиация</item>
        <item>Медицинское право</item>
        <item>Миграционное право</item>
        <item>Налоговые споры (бухгалтерия)</item>
        <item>Обращения в ЕСПЧ (ООН) </item>
        <item>Права потребителей</item>
        <item>Регистрация фирм</item>
        <item>Сделки и споры с недвижимостью</item>
        <item>Таможенное право</item>
    </string-array>
    <string name="title_activity_profile_redactor">Profile_redactor</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_header">настройки</string>
    <string name="settings_sh">размер шрифта</string>
    <string name="settings_sh_1">маленький</string>
    <string name="settings_sh_2">средний</string>
    <string name="settings_sh_3">большой</string>
    <string name="settings_sh_4">очень большой</string>
    <string name="settings_pu">Push-уведомления</string>
    <string name="settings_pu_1">уведомления при получении вопроса от пользователя</string>
    <string name="settings_pu_2">уведомления при новом сообщении от пользователя</string>
    <string name="settings_pu_3">уведомления при подтверждении платежа</string>
    <string name="title_activity_map_my_adres">Map_my_adres</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="title_activity_paid_services">Paid_services</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about_us">About_us</string>
    <string name="title_activity_my_frag_quest_chat">My_frag_quest_chat</string>
    <string name="title_activity_password_help">Password_help</string>
</resources>