<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/z_fon_12">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="53dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <Button
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="назад"
                android:id="@+id/settings_but_cancel"
                android:textSize="15dp"
                android:background="#00ffffff"
                android:textColor="#ffffff"
                android:onClick="onClick" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ffffff" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:text="@string/settings_header"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_marginTop="54dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/settings_sh"
                    android:layout_marginTop="10dp"
                    android:background="#5a000000"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:textColor="#ff9102"
                    android:textSize="16dp"
                    android:typeface="monospace" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_1"
                    android:id="@+id/settings_ch_1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="14dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_2"
                    android:id="@+id/settings_ch_2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_3"
                    android:id="@+id/settings_ch_3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_4"
                    android:id="@+id/settings_ch_4"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/settings_pu"
                    android:layout_marginTop="10dp"
                    android:background="#5a000000"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:textSize="16dp"
                    android:textColor="#ff9102"
                    android:typeface="monospace" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pu_1"
                    android:id="@+id/settings_p_1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pu_2"
                    android:id="@+id/settings_p_2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pu_3"
                    android:id="@+id/settings_p_3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Отправка данных о местоположении"
                    android:layout_marginTop="10dp"
                    android:background="#5a000000"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:textSize="16dp"
                    android:textColor="#ff9102"
                    android:typeface="monospace" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="разрешить приложению получать данные о вашем местоположении"
                    android:id="@+id/settings_p_7"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp"
                    android:checked="false" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>